finished most of the site style

--- a/index.html
+++ b/index.html
@@ -3,11 +3,164 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gaming Campus</title>
 
     <link rel="stylesheet" href="assets/dist/style.css">
 </head>
-<body>
-    
+<body class="font-roboto">
+    <header>
+        <nav>
+            <div>
+                <ul class="flex gap-12 items-center justify-center text-2xl pt-4 pb-4">
+                    <li><a href="" class="uppercase">accueil</a></li>
+                    <li><a href="" class="uppercase">business school</a></li>
+                    <li><a href="" class="uppercase">ecole esport</a></li>
+                    <li><a href="" class="uppercase">cours de jeux vidéo</a></li>
+                    <li><a href="" class="uppercase">le campus</a></li>
+                    <li><a href="" class="uppercase">newsroom</a></li>
+                    <li><a href="" class="uppercase">parents</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <!-- section banner  -->
+        <section id="banner" class="bg-black h-[55vh]">
+            <div class="flex flex-col items-center justify-center text-white pt-32">
+                <img src="assets/img/logo-gc-hero.png" alt="logo gaming campus" class="">
+                <h1 class="uppercase text-4xl">passion. professionnalisme. performances.</h1>
+                <a href="" class="cta cta--primary uppercase text-2xl">Gaming Campus en vidéo</a>
+            </div>
+        </section>
+
+        <!-- section description  -->
+        <section class="flex items-center justify-center pt-32 pb-32">
+            <p class="text-4xl w-2/3 text-center">Imaginé par des profesionnels des jeux vidéo et de l'éducation, Gaming Campus est un lieu unique pour révéler les talents et développer les compétences</p>
+        </section>
+
+        <!-- section cards gaming  -->
+        <section class="bg-black h-[65vh] flex justify-around text-white text-2xl">
+            <!-- card gaming 1 -->
+            <div class="w-[25%] flex flex-col items-center justify-center">
+                <img src="assets/img/logo-gbs-home.png" alt="logo gaming business school" class="w-3/4">
+                <h2 class="uppercase text-4xl pt-8">Gaming business school</h2>
+                <p class="text-center pt-4 w-5/6">Formez-vous dans la première école de management dédié au enjeux et métiers du jeu vidéo.</p>
+                <a href="" class="cta cta--primary uppercase pt-8">en savoir plus</a>
+            </div>
+            <div class="w-[25%] flex flex-col items-center justify-center">
+                <img src="assets/img/logo-ga-home.png" alt="logo gaming Academy" class="w-3/4">
+                <h2 class="uppercase text-4xl pt-8">Gaming Academy</h2>
+                <p class="text-center pt-4 w-5/6">Entrainez-vous dans des conditions optimales pour devenir esportif professionnel</p>
+                <a href="" class="cta cta--primary uppercase pt-8">en savoir plus</a>
+            </div>
+            <div class="w-[25%] flex flex-col items-center justify-center">
+                <img src="assets/img/logo-gg-home.png" alt="logo gaming guru" class="w-3/4">
+                <h2 class="uppercase text-4xl pt-8">Gaming Guru</h2>
+                <p class="text-center pt-4 w-5/6">Jouez avec les meilleurs gamers pour vous améliorer dans vos jeux vidéo préférés</p>
+                <a href="" class="cta cta--primary uppercase pt-8">en savoir plus</a>
+            </div> 
+        </section>
+        <!-- section news  -->
+        <section id="news" class="text-2xl bg-[#FAFAFA]">
+            <div>
+                <!-- news heading  -->
+                <div class="flex justify-center pt-16">
+                    <div class="flex flex-col">
+                        <h2 class="uppercase text-4xl">Les news du campus</h2>
+                        <p class="text-3xl">Suivez l'actualité de Gaming Campus, de G.Guru, G. et G.Academy.</p>
+                    </div>
+                    <a href="" class="cta cta--secondary uppercase text-3xl">La newsroom ></a>
+                </div>
+                <!-- news card  -->
+                <div class="w-4/6 flex justify-center ml-72 gap-64 pt-16">
+                    <!-- card news 1  -->
+                    <div class="flex flex-col text-center w-1/5 ">
+                        <img src="assets/img/pgw18home.jpg" alt="image de la paris games week" class="rounded-xl  shadow-2xl">
+                        <h3 class="pb-4 pt-4 text-left">Réunion d'information 19 décembre</h3>
+                        <p class="text-left">Venez à notre rencontre lors de cette réunion d'information. Témoignages des étudiants / Ateliers sur la pédagogie par projet par projet "Active learning by gaming campus" / Découverte des locaux/ Rencontre avec l'équipe pédagogique / Questions réponse.</p>
+                        <a href="" class="news-link uppercase pt-4 text-lg text-blue-300">sur inscription ></a>
+                    </div>
+                    <!-- card news 2  -->
+                    <div class="flex flex-col text-center w-1/5">
+                        <img src="assets/img/pgw18home.jpg" alt="image de la paris games week" class="rounded-xl  shadow-2xl">
+                        <h3 class="pb-4 pt-4 text-left">Paris Games week 2018 et réunions d'information</h3>
+                        <p class=" text-left">Pendant tout le mois d'octobre venez rencotrer l'équipe pédagogique du Gaming Campus : 3 réunions d'information au Gaming Campus Lyon et stand Gaming Campus à la PGW17</p>
+                        <a href="" class="news-link uppercase pt-4 text-lg text-blue-300">lire la suite ></a>
+                    </div>
+                    <!-- card news 3 -->
+                    <div class="flex flex-col text-center w-1/5">
+                        <img src="assets/img/inauguration_gaming_campus_photo.jpg" alt="image de la paris games week" class="rounded-xl shadow-2xl">
+                        <h3 class="pb-4 pt-4 text-left">Inauguration Gaming Campus Lyon</h3>
+                        <p class=" text-left">Revivez l'inaugurations du Gaming Campus Lyon avec les 180 invités, les grandes annonces de la rentrée, les photos de la soirée et les premières dates de réunions d'information.</p>
+                        <a href="" class="news-link uppercase pt-4 text-lg text-blue-300">lire la suite ></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- FOOTER  -->
+         <footer class="p-12">
+            <div class="flex justify-center gap-8 text-2xl">
+                <img src="assets/img/logo-gc-footer.jpg" alt="Logo Gaming campus" class="w-1/12">
+                <ul class="pl-24">
+                    <li class="uppercase">infos pratique</li>
+                    <li><a href="">Gaming Business School</a></li>
+                    <li><a href="">Gaming Academy</a></li>
+                    <li><a href="">Gaming Guru</a></li>
+                    <li><a href="">Recrutement</a></li>
+                    <li><a href="">Investisseurs</a></li>
+                    <li><a href="">Mentions légales</a></li>
+                    <li><a href="">C.G.U</a></li>
+                </ul>
+                <ul class="w-96">
+                    <li class="uppercase"> Parents</li>
+                    <li><a href="">Question / réponse pour vous accompagner dans votre réflexion sur l'orientation de votre enfant et le choix de Gaming Campus/</a></li>
+                    <li><a href="">En savoir plus</a></li>
+                </ul>
+                <div>
+                    <ul>
+                        <li class="uppercase"></li>
+                        <li>Tél. 04 28 29 81 03</li>
+                        <li>contact@gamingcampus.fr</li>
+                    </ul>
+                    <div class="flex flex-col">
+                        <p class="uppercase">Nous suivre</p>
+                        <ul class="flex">
+                            <li><a href=""><img src="assets/svg/twitter-black.svg" alt="logo de twitter" class="w-16 h-12"></a></li>
+                            <li><a href=""><img src="assets/svg/facebook-black.svg" alt="logo de facekook" class="w-16 h-12"></a></li>
+                            <li><a href=""><img src="assets/svg/linkedin-black.svg" alt="logo de linkedin" class="w-16 h-12"></a></li>
+                            <li><a href=""><img src="assets/svg/instagram-black.svg" alt="logo d'instagram"  class="w-16 h-12"></a></li>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="text-2xl flex justify-center mt-52">
+                <div class="flex flex-col">
+                    <h3 class="uppercase font-semibold text-3xl">ils parlent de nous</h3> 
+                    <p>Voir toutes les retombées presse.</p>
+                </div>
+               <ul class="flex gap-12">
+                <li><img src="assets/img/figaro.png" alt="Logo du figaro" class="w-36"></li>
+                <li><img src="assets/img/challenges.png" alt="Logo challenges" class="w-36"></li>
+                <li><img src="assets/img/leparisien.png" alt="Logo du parisien" class="w-36"></li>
+                <li><img src="assets/img/lemonde.png" alt="Logo du Monde" class="w-36"></li>
+                <li><img src="assets/img/echos.png" alt="Logo Echos" class="w-36"></li>
+                <li><img src="assets/img/bfm.png" alt="Logo de BFM" class="w-36"></li>
+                <li><img src="assets/img/lepoint.png" alt="logo lepoint" class="w-36"></li>
+               </ul>
+            </div>
+            <div class="bg-black flex">
+                <h2 class="uppercase"> partenaires officiels</h2>
+                <ul class="flex items-center gap-28">
+                    <li><img src="assets/img/apollo.png" alt="Logo Apollo" class="w-36"></li>
+                    <li><img src="assets/img/chiliz.png" alt="logo de chiliz" class="w-36"></li>
+                    <li><img src="assets/img/omen.png" alt="logo d'Omen" class="w-36"></li>
+                    <li><img src="assets/img/joa.png" alt="logo de joa" class="w-36"></li>
+                    <li><img src="assets/img/maxonomic.png" alt="logo de maxonomic" class="w-36"></li>
+                    <li><img src="assets/img/credit-mutuel.png" alt="logo du credit-mutuel" class="w-36"></li>
+                </ul>
+            </div>
+         </footer>
+    </main>
 </body>
 </html>
