adding button style

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="flex flex-col items-center justify-center text-white pt-32">
                 <img src="assets/img/logo-gc-hero.png" alt="logo gaming campus" class="">
                 <h1 class="uppercase text-4xl">passion. professionnalisme. performances.</h1>
-                <a href="" class="cta cta--primary uppercase text-2xl">Gaming Campus en vidéo</a>
+                <a href="" class="cta  uppercase text-2xl">Gaming Campus en vidéo</a>
             </div>
         </section>
 
@@ -98,10 +98,10 @@
             </div>
         </section>
         <!-- FOOTER  -->
-         <footer class="p-12">
+         <footer class="pt-12">
             <div class="flex justify-center gap-8 text-2xl">
-                <img src="assets/img/logo-gc-footer.jpg" alt="Logo Gaming campus" class="w-1/12">
-                <ul class="pl-24">
+                <img src="assets/img/logo-gc-footer.jpg" alt="Logo Gaming campus" class="w-1/12 h-5/6">
+                <ul class="pl-24 leading-[3.5rem]">
                     <li class="uppercase">infos pratique</li>
                     <li><a href="">Gaming Business School</a></li>
                     <li><a href="">Gaming Academy</a></li>
@@ -117,7 +117,7 @@
                     <li><a href="">En savoir plus</a></li>
                 </ul>
                 <div>
-                    <ul>
+                    <ul class="pb-12">
                         <li class="uppercase"></li>
                         <li>Tél. 04 28 29 81 03</li>
                         <li>contact@gamingcampus.fr</li>
@@ -130,6 +130,10 @@
                             <li><a href=""><img src="assets/svg/linkedin-black.svg" alt="logo de linkedin" class="w-16 h-12"></a></li>
                             <li><a href=""><img src="assets/svg/instagram-black.svg" alt="logo d'instagram"  class="w-16 h-12"></a></li>
                             </li>
+                        </ul>
+                        <ul>
+                            <li>&copy; 2018 Gaming Campus</li>
+                            <li>Tous droits réservés.</li>
                         </ul>
                     </div>
                 </div>
@@ -149,16 +153,21 @@
                 <li><img src="assets/img/lepoint.png" alt="logo lepoint" class="w-36"></li>
                </ul>
             </div>
-            <div class="bg-black flex">
-                <h2 class="uppercase"> partenaires officiels</h2>
-                <ul class="flex items-center gap-28">
+            <div class="bg-black flex flex-col p-6">
+                <h2 class="uppercase text-white text-4xl flex justify-center items-center"> partenaires officiels</h2>
+                <ul class="flex items-center justify-center gap-28">
                     <li><img src="assets/img/apollo.png" alt="Logo Apollo" class="w-36"></li>
                     <li><img src="assets/img/chiliz.png" alt="logo de chiliz" class="w-36"></li>
                     <li><img src="assets/img/omen.png" alt="logo d'Omen" class="w-36"></li>
                     <li><img src="assets/img/joa.png" alt="logo de joa" class="w-36"></li>
                     <li><img src="assets/img/maxonomic.png" alt="logo de maxonomic" class="w-36"></li>
                     <li><img src="assets/img/credit-mutuel.png" alt="logo du credit-mutuel" class="w-36"></li>
+                    <li><img src="assets/img/ubisoft.png" alt="logo d'ubisoft" class="w-36"></li>
                 </ul>
+            </div>
+
+            <div class="bg-gray-400 mt-12 pl-72 text-2xl p-6">
+                <p>ce site utilise des Cookies. <a href="" class="underline">Cliquez ici pour en savoir +</a></p>
             </div>
          </footer>
     </main>
