--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section id="banner" class="bg-black h-[65vh] lg:h-[55vh]">
             <div class=" flex flex-col items-center justify-center text-white pt-32 ml-[5%]">
                 <img src="assets/img/logo-gc-hero.png" alt="logo gaming campus" class="-mt-24 lg:pb-0">
-                <h1 class="uppercase text-4xl text-center pt-16">passion. professionnalisme. performances.</h1>
+                <h1 class="uppercase text-3xl lg:text-4xl text-center pt-16 w-[100%]">passion. professionnalisme. performances.</h1>
                 <a href="" class="cta  uppercase text-2xl duration-200 hover:text-[#c5c4c4] ">Gaming Campus en vidéo</a>
             </div>
         </section>
@@ -72,26 +72,26 @@
                         <h2 class="uppercase text-4xl">Les news du campus</h2>
                         <p class="text-3xl">Suivez l'actualité de Gaming Campus, de G.Guru, G. et G.Academy.</p>
                     </div>
-                    <a href="" class="cta cta--secondary uppercase text-3xl duration-200 hover:text-[#000000ae]  w-[35%]">La newsroom ></a>
+                    <a href="" class="cta cta--secondary uppercase text-3xl duration-200 hover:text-[#000000ae] w-[80%] md:w-[35%]">La newsroom ></a>
                 </div>
                 <!-- news card  -->
                 <div class="lg:w-4/6 flex flex-col lg:flex-row items-center justify-center lg:ml-72 gap-16 lg:gap-64 pt-16">
                     <!-- card news 1  -->
-                    <div class="flex flex-col text-center w-3/5 lg:w-1/5 ">
+                    <div class="flex flex-col text-center w-[95%] md:w-3/5 lg:w-1/5 ">
                         <img src="assets/img/pgw18home.jpg" alt="image de la paris games week" class="rounded-xl  shadow-2xl">
                         <h3 class="pb-4 pt-4 text-left">Réunion d'information 19 décembre</h3>
                         <p class="text-left">Venez à notre rencontre lors de cette réunion d'information. Témoignages des étudiants / Ateliers sur la pédagogie par projet par projet "Active learning by gaming campus" / Découverte des locaux/ Rencontre avec l'équipe pédagogique / Questions réponse.</p>
                         <a href="" class="news-link uppercase pt-4 text-lg text-blue-300 duration-200 hover:text-[#5c9ee9]">sur inscription ></a>
                     </div>
                     <!-- card news 2  -->
-                    <div class="flex flex-col text-center w-3/5 lg:w-1/5">
+                    <div class="flex flex-col text-center w-[95%] md:w-3/5 lg:w-1/5">
                         <img src="assets/img/pgw18home.jpg" alt="image de la paris games week" class="rounded-xl  shadow-2xl">
                         <h3 class="pb-4 pt-4 text-left">Paris Games week 2018 et réunions d'information</h3>
                         <p class=" text-left">Pendant tout le mois d'octobre venez rencotrer l'équipe pédagogique du Gaming Campus : 3 réunions d'information au Gaming Campus Lyon et stand Gaming Campus à la PGW17</p>
                         <a href="" class="news-link uppercase pt-4 text-lg text-blue-300 lg:pt-[32.5%] duration-200 hover:text-[#5c9ee9]">lire la suite ></a>
                     </div>
                     <!-- card news 3 -->
-                    <div class="flex flex-col text-center w-3/5 lg:w-1/5">
+                    <div class="flex flex-col text-center w-[95%] md:w-3/5 lg:w-1/5">
                         <img src="assets/img/inauguration_gaming_campus_photo.jpg" alt="image de la paris games week" class="rounded-xl shadow-2xl">
                         <h3 class="pb-4 pt-4 text-left">Inauguration Gaming Campus Lyon</h3>
                         <p class=" text-left">Revivez l'inaugurations du Gaming Campus Lyon avec les 180 invités, les grandes annonces de la rentrée, les photos de la soirée et les premières dates de réunions d'information.</p>
@@ -102,11 +102,11 @@
         </section>
         <!-- FOOTER  -->
          <footer class="pt-12">
-            <div id="footer-primary-content" class="flex flex-col lg:flex-row items-center justify-center gap-8 text-2xl relative w-3/4 ml-[10%]">
+            <div id="footer-primary-content" class="flex flex-col lg:flex-row items-center justify-center gap-8 text-2xl relative w-[100%] md:w-3/4  ml-0 md:ml-[10%]">
                 <a href="index.html">
-                    <img src="assets/img/logo-gc-footer.jpg" alt="Logo Gaming campus" class="duration-200 hover:opacity-75 ml-[43.5%]">
+                    <img src="assets/img/logo-gc-footer.jpg" alt="Logo Gaming campus" class="duration-200 hover:opacity-75 ml-[15%] md:ml-[43.5%]">
                 </a>
-                <ul class="pl-24 leading-[3.5rem] text-center lg:text-left">
+                <ul class="pl-0 md:pl-24 leading-[3.5rem] text-center lg:text-left">
                     <li class="uppercase pb-8 -mt-3">infos pratique</li>
                     <li><a href="" class="duration-200 hover:text-[#00000088]">Gaming Business School</a></li>
                     <li><a href="" class="duration-200 hover:text-[#00000088]">Gaming Academy</a></li>
@@ -116,27 +116,27 @@
                     <li><a href="" class="duration-200 hover:text-[#00000088]">Mentions légales</a></li>
                     <li><a href="" class="duration-200 hover:text-[#00000088]">C.G.U</a></li>
                 </ul>
-                <ul class="lg:w-96 pl-24 lg:pl-0 text-center lg:text-left">
+                <ul class="lg:w-96 pl-0 md:pl-24 lg:pl-0 text-center lg:text-left">
                     <li class="uppercase pb-8"> Parents</li>
                     <li class="pb-8"><a href="" class="duration-200 hover:text-[#00000088]">Question / réponse pour vous accompagner dans votre réflexion sur l'orientation de votre enfant et le choix de Gaming Campus/</a></li>
                     <li><a href="" class="duration-200 hover:text-[#00000088]">En savoir plus</a></li>
                 </ul>
                 <div>
-                    <ul class="pb-12 pl-24 lg:pl-0 text-center lg:text-left">
+                    <ul class="pb-12 pl-0 md:pl-24 lg:pl-0 text-center lg:text-left">
                         <li class="uppercase"></li>
                         <li class="pb-8">Tél. 04 28 29 81 03</li>
                         <li class="pb-8"> <a href="" class="duration-200 hover:text-[#00000088]">contact@gamingcampus.fr</a></li>
                     </ul>
                     <div class="flex flex-col">
-                        <p class="uppercase pb-8 pl-24 lg:pl-0 text-center lg:text-left">Nous suivre</p>
-                        <ul class="flex pl-24 lg:pl-0">
+                        <p class="uppercase pb-8 pl-0 md:pl-24 lg:pl-0 text-center lg:text-left">Nous suivre</p>
+                        <ul class="flex pl-0 md:pl-24 lg:pl-0">
                             <li class="pb-8"><a href=""><img src="assets/svg/twitter-black.svg" alt="logo de twitter" class="w-16 h-12 duration-200 hover:opacity-65"></a></li>
                             <li class="pb-8"><a href=""><img src="assets/svg/facebook-black.svg" alt="logo de facekook" class="w-16 h-12 duration-200 hover:opacity-65"></a></li>
                             <li class="pb-8"><a href=""><img src="assets/svg/linkedin-black.svg" alt="logo de linkedin" class="w-16 h-12 duration-200 hover:opacity-65"></a></li>
                             <li class="pb-8"><a href=""><img src="assets/svg/instagram-black.svg" alt="logo d'instagram"  class="w-16 h-12 duration-200 hover:opacity-65"></a></li>
                             </li>
                         </ul>
-                        <ul class="pl-24 lg:pl-0 text-center lg:text-left">
+                        <ul class="pl-0 md:pl-24 lg:pl-0 text-center lg:text-left">
                             <li>&copy; 2018 Gaming Campus</li>
                             <li>Tous droits réservés.</li>
                         </ul>
@@ -160,7 +160,7 @@
             </div>
             <div class="bg-black flex flex-col p-6">
                 <h2 class="uppercase text-white text-4xl flex justify-center items-center"> partenaires officiels</h2>
-                <ul class="flex items-center justify-center gap-28">
+                <ul class="flex flex-col items-center lg:flex-row justify-center gap-16 lg:gap-28">
                     <li><img src="assets/img/apollo.png" alt="Logo Apollo" class="w-24"></li>
                     <li><img src="assets/img/chiliz.png" alt="logo de chiliz" class="w-24"></li>
                     <li><img src="assets/img/omen.png" alt="logo d'Omen" class="w-24"></li>
@@ -171,7 +171,7 @@
                 </ul>
             </div>
 
-            <div class="bg-gray-400 mt-12 pl-72 text-2xl p-6">
+            <div class="bg-gray-400 mt-12 pl-28 lg:pl-72 text-2xl p-6">
                 <p>ce site utilise des Cookies. <a href="" class="underline duration-200 hover:text-[#00000088]">Cliquez ici pour en savoir +</a></p>
             </div>
          </footer>
