corrected some bugs on responsive design

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <!-- section description  -->
         <section class="flex items-center justify-center pt-32 pb-32">
-            <p class="text-4xl w-2/3 text-center">Imaginé par des profesionnels des jeux vidéo et de l'éducation, Gaming Campus est un lieu unique pour révéler les talents et développer les compétences</p>
+            <p class="text-3xl md:text-4xl w-[100%] md:w-2/3 text-center">Imaginé par des profesionnels des jeux vidéo et de l'éducation, Gaming Campus est un lieu unique pour révéler les talents et développer les compétences</p>
         </section>
 
         <!-- section cards gaming  -->
@@ -88,14 +88,14 @@
                         <img src="assets/img/pgw18home.jpg" alt="image de la paris games week" class="rounded-xl  shadow-2xl">
                         <h3 class="pb-4 pt-4 text-left">Paris Games week 2018 et réunions d'information</h3>
                         <p class=" text-left">Pendant tout le mois d'octobre venez rencotrer l'équipe pédagogique du Gaming Campus : 3 réunions d'information au Gaming Campus Lyon et stand Gaming Campus à la PGW17</p>
-                        <a href="" class="news-link uppercase pt-4 text-lg text-blue-300 lg:pt-[32.5%] duration-200 hover:text-[#5c9ee9]">lire la suite ></a>
+                        <a href="" class="news-link uppercase pt-4 text-lg text-blue-300 lg:pt-28 duration-200 hover:text-[#5c9ee9]">lire la suite ></a>
                     </div>
                     <!-- card news 3 -->
                     <div class="flex flex-col text-center w-[95%] md:w-3/5 lg:w-1/5">
                         <img src="assets/img/inauguration_gaming_campus_photo.jpg" alt="image de la paris games week" class="rounded-xl shadow-2xl">
                         <h3 class="pb-4 pt-4 text-left">Inauguration Gaming Campus Lyon</h3>
                         <p class=" text-left">Revivez l'inaugurations du Gaming Campus Lyon avec les 180 invités, les grandes annonces de la rentrée, les photos de la soirée et les premières dates de réunions d'information.</p>
-                        <a href="" class="news-link uppercase pt-4 text-lg text-blue-300 lg:pt-[32.5%] duration-200 hover:text-[#5c9ee9]">lire la suite ></a>
+                        <a href="" class="news-link uppercase pt-4 text-lg text-blue-300 lg:pt-28 duration-200 hover:text-[#5c9ee9]">lire la suite ></a>
                     </div>
                 </div>
             </div>
@@ -104,9 +104,9 @@
          <footer class="pt-12">
             <div id="footer-primary-content" class="flex flex-col lg:flex-row items-center justify-center gap-8 text-2xl relative w-[100%] md:w-3/4  ml-0 md:ml-[10%]">
                 <a href="index.html">
-                    <img src="assets/img/logo-gc-footer.jpg" alt="Logo Gaming campus" class="duration-200 hover:opacity-75 ml-[15%] md:ml-[43.5%]">
+                    <img src="assets/img/logo-gc-footer.jpg" alt="Logo Gaming campus" class="duration-200 hover:opacity-75 ml-[15%] md:ml-[20%]">
                 </a>
-                <ul class="pl-0 md:pl-24 leading-[3.5rem] text-center lg:text-left">
+                <ul class="pl-0 md:pl-16 leading-[3.5rem] text-center lg:text-left">
                     <li class="uppercase pb-8 -mt-3">infos pratique</li>
                     <li><a href="" class="duration-200 hover:text-[#00000088]">Gaming Business School</a></li>
                     <li><a href="" class="duration-200 hover:text-[#00000088]">Gaming Academy</a></li>
@@ -116,27 +116,27 @@
                     <li><a href="" class="duration-200 hover:text-[#00000088]">Mentions légales</a></li>
                     <li><a href="" class="duration-200 hover:text-[#00000088]">C.G.U</a></li>
                 </ul>
-                <ul class="lg:w-96 pl-0 md:pl-24 lg:pl-0 text-center lg:text-left">
+                <ul class="lg:w-96 pl-0 md:pl-16 lg:pl-0 text-center lg:text-left">
                     <li class="uppercase pb-8"> Parents</li>
                     <li class="pb-8"><a href="" class="duration-200 hover:text-[#00000088]">Question / réponse pour vous accompagner dans votre réflexion sur l'orientation de votre enfant et le choix de Gaming Campus/</a></li>
                     <li><a href="" class="duration-200 hover:text-[#00000088]">En savoir plus</a></li>
                 </ul>
                 <div>
-                    <ul class="pb-12 pl-0 md:pl-24 lg:pl-0 text-center lg:text-left">
+                    <ul class="pb-12 pl-0 md:pl-16 lg:pl-0 text-center lg:text-left">
                         <li class="uppercase"></li>
                         <li class="pb-8">Tél. 04 28 29 81 03</li>
                         <li class="pb-8"> <a href="" class="duration-200 hover:text-[#00000088]">contact@gamingcampus.fr</a></li>
                     </ul>
                     <div class="flex flex-col">
-                        <p class="uppercase pb-8 pl-0 md:pl-24 lg:pl-0 text-center lg:text-left">Nous suivre</p>
-                        <ul class="flex pl-0 md:pl-24 lg:pl-0">
+                        <p class="uppercase pb-8 pl-0 md:pl-16 lg:pl-0 text-center lg:text-left">Nous suivre</p>
+                        <ul class="flex pl-0 md:pl-16 lg:pl-0">
                             <li class="pb-8"><a href=""><img src="assets/svg/twitter-black.svg" alt="logo de twitter" class="w-16 h-12 duration-200 hover:opacity-65"></a></li>
                             <li class="pb-8"><a href=""><img src="assets/svg/facebook-black.svg" alt="logo de facekook" class="w-16 h-12 duration-200 hover:opacity-65"></a></li>
                             <li class="pb-8"><a href=""><img src="assets/svg/linkedin-black.svg" alt="logo de linkedin" class="w-16 h-12 duration-200 hover:opacity-65"></a></li>
                             <li class="pb-8"><a href=""><img src="assets/svg/instagram-black.svg" alt="logo d'instagram"  class="w-16 h-12 duration-200 hover:opacity-65"></a></li>
                             </li>
                         </ul>
-                        <ul class="pl-0 md:pl-24 lg:pl-0 text-center lg:text-left">
+                        <ul class="pl-0 md:pl-16 lg:pl-0 text-center lg:text-left">
                             <li>&copy; 2018 Gaming Campus</li>
                             <li>Tous droits réservés.</li>
                         </ul>
