--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <li><a href="" class="uppercase duration-200 hover:text-[#c5c4c4]">le campus</a></li>
                     <li><a href="" class="uppercase duration-200 hover:text-[#c5c4c4]">newsroom</a></li>
                     <li><a href="" class="uppercase duration-200 hover:text-[#c5c4c4]">parents</a></li>
+                    <li><a href="" class="uppercase duration-200 hover:text-[#c5c4c4] bg-gray-200 rounded-full p-3">fr / en</a></li>
                 </ul>
             </div>
         </nav>
