--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <img src="assets/svg/bars-solid.svg" alt="logo menu navigation" class="w-[7.5%] ml-[47.5%]">
             </div>
             <div>
-                <ul class="hidden lg:inline-block lg:flex lg:flex-row gap-12 items-center justify-center text-2xl pt-4 pb-4">
+                <ul class="hidden lg:inline-block lg:flex lg:flex-row gap-12 items-center justify-center pt-4 pb-4">
                     <li id="border" class="relative"><a href="" class="uppercase duration-200 hover:text-[#c5c4c4]">accueil</a></li>
                     <li><a href="" class="uppercase duration-200 hover:text-[#c5c4c4]">business school</a></li>
                     <li><a href="" class="uppercase duration-200 hover:text-[#c5c4c4]">ecole esport</a></li>
@@ -29,54 +29,54 @@
     </header>
     <main>
         <!-- section banner  -->
-        <section id="banner" class="bg-black h-[65vh] lg:h-[55vh]">
+        <section id="banner" class="bg-black h-[65vh] lg:h-[55vh] lg:pt-12">
             <div class=" flex flex-col items-center justify-center text-white pt-32 ml-[5%]">
                 <img src="assets/img/logo-gc-hero.png" alt="logo gaming campus" class="-mt-24 lg:pb-0">
-                <h1 class="uppercase text-3xl lg:text-4xl text-center pt-16 w-[100%]">passion. professionnalisme. performances.</h1>
+                <h1 class="uppercase text-2xl lg:text-3xl text-center pt-16 w-[100%]">passion. professionnalisme. performances.</h1>
                 <a href="" class="cta  uppercase text-2xl duration-200 hover:text-[#c5c4c4] ">Gaming Campus en vidéo</a>
             </div>
         </section>
 
         <!-- section description  -->
         <section class="flex items-center justify-center pt-32 pb-32">
-            <p class="text-3xl md:text-4xl w-[100%] md:w-2/3 text-center">Imaginé par des profesionnels des jeux vidéo et de l'éducation, Gaming Campus est un lieu unique pour révéler les talents et développer les compétences</p>
+            <p class="text-2xl md:text-3xl w-[100%] md:w-2/3 text-center">Imaginé par des profesionnels des jeux vidéo et de l'éducation, Gaming Campus est un lieu unique pour révéler les talents et développer les compétences</p>
         </section>
 
         <!-- section cards gaming  -->
-        <section class="bg-black h-[100%] flex flex-col items-center lg:flex-row justify-around text-white text-2xl">
+        <section class="bg-black h-[100%] flex flex-col items-center justify-center lg:gap-12 lg:flex-row text-white text-2xl lg:pt-20 lg:pb-20">
             <!-- card gaming 1 -->
-            <div class=" w-[90%] pb-12  lg:w-[25%] flex flex-col items-center justify-center">
+            <div class=" w-[90%] pb-12  lg:w-[17.5%] flex flex-col items-center justify-center">
                 <img src="assets/img/logo-gbs-home.png" alt="logo gaming business school" class="w-3/4">
-                <h2 class="uppercase text-4xl pt-8">Gaming business school</h2>
+                <h2 class="uppercase text-3xl pt-8">Gaming business school</h2>
                 <p class="text-center pt-4 w-5/6">Formez-vous dans la première école de management dédié au enjeux et métiers du jeu vidéo.</p>
                 <a href="" class="cta cta--primary uppercase pt-8 duration-200 hover:text-[#c5c4c4]">en savoir plus</a>
             </div>
-            <div class="w-[90%] pb-12  lg:w-[25%] flex flex-col items-center justify-center">
+            <div class="w-[90%] pb-12  lg:w-[17.5%] flex flex-col items-center justify-center">
                 <img src="assets/img/logo-ga-home.png" alt="logo gaming Academy" class="w-3/4">
-                <h2 class="uppercase text-4xl pt-8">Gaming Academy</h2>
+                <h2 class="uppercase text-3xl pt-8">Gaming Academy</h2>
                 <p class="text-center pt-4 w-5/6">Entrainez-vous dans des conditions optimales pour devenir esportif professionnel</p>
                 <a href="" class="cta cta--primary uppercase pt-8 duration-200 hover:text-[#c5c4c4]">en savoir plus</a>
             </div>
-            <div class="w-[90%] pb-12 lg:w-[25%] flex flex-col items-center justify-center">
+            <div class="w-[90%] pb-12 lg:w-[17.5%] flex flex-col items-center justify-center">
                 <img src="assets/img/logo-gg-home.png" alt="logo gaming guru" class="w-3/4">
-                <h2 class="uppercase text-4xl pt-8">Gaming Guru</h2>
+                <h2 class="uppercase text-3xl pt-8">Gaming Guru</h2>
                 <p class="text-center pt-4 w-5/6">Jouez avec les meilleurs gamers pour vous améliorer dans vos jeux vidéo préférés</p>
                 <a href="" class="cta cta--primary uppercase pt-8 duration-200 hover:text-[#c5c4c4]">en savoir plus</a>
             </div> 
         </section>
         <!-- section news  -->
-        <section id="news" class="text-2xl bg-[#FAFAFA]">
+        <section id="news" class="text-[1.25rem] bg-[#FAFAFA]">
             <div>
                 <!-- news heading  -->
                 <div class="flex flex-col items-center lg:flex-row justify-center pt-16">
                     <div class="flex flex-col text-center w-2/3">
-                        <h2 class="uppercase text-4xl">Les news du campus</h2>
-                        <p class="text-3xl">Suivez l'actualité de Gaming Campus, de G.Guru, G. et G.Academy.</p>
+                        <h2 class="uppercase text-3xl">Les news du campus</h2>
+                        <p class="text-2xl">Suivez l'actualité de Gaming Campus, de G.Guru, G. et G.Academy.</p>
                     </div>
-                    <a href="" class="cta cta--secondary uppercase text-3xl duration-200 hover:text-[#000000ae] w-[80%] md:w-[35%]">La newsroom ></a>
+                    <a href="" class="cta cta--secondary uppercase text-2xl duration-200 hover:text-[#000000ae] w-[80%] md:w-[35%] lg:max-w-72 lg:-ml-72">La newsroom ></a>
                 </div>
                 <!-- news card  -->
-                <div class="lg:w-4/6 flex flex-col lg:flex-row items-center justify-center lg:ml-72 gap-16 lg:gap-64 pt-16">
+                <div class="lg:w-4/6 flex flex-col lg:flex-row items-center lg:items-start justify-center lg:ml-[15%] gap-16 lg:gap-44 pt-16">
                     <!-- card news 1  -->
                     <div class="flex flex-col text-center w-[95%] md:w-3/5 lg:w-1/5 ">
                         <img src="assets/img/pgw18home.jpg" alt="image de la paris games week" class="rounded-xl  shadow-2xl">
@@ -102,8 +102,8 @@
             </div>
         </section>
         <!-- FOOTER  -->
-         <footer class="pt-12">
-            <div id="footer-primary-content" class="flex flex-col lg:flex-row items-center justify-center gap-8 text-2xl relative w-[100%] md:w-3/4  ml-0 md:ml-[10%]">
+         <footer class="pt-12 mx-auto">
+            <div id="footer-primary-content" class="flex flex-col lg:flex-row lg:m-0 justify-center gap-8 text-2xl relative w-[100%] md:w-3/4  ml-10 md:ml-[10%] lg:ml-[10%]">
                 <a href="index.html">
                     <img src="assets/img/logo-gc-footer.jpg" alt="Logo Gaming campus" class="duration-200 hover:opacity-75 ml-[15%] md:ml-[20%]">
                 </a>
