changed responsive and text size

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body class="font-roboto">
     <header>
         <nav>
-            <div class="lg:hidden">
-                <img src="assets/svg/bars-solid.svg" alt="logo menu navigation" class="w-[7.5%] ml-[47.5%]">
+            <div class="xl:hidden">
+                <img src="assets/svg/bars-solid.svg" alt="logo menu navigation" class="w-[7.5%] ml-[47.5%] md:p-2">
             </div>
             <div>
-                <ul class="hidden lg:inline-block lg:flex lg:flex-row gap-12 items-center justify-center pt-4 pb-4">
+                <ul class="hidden xl:inline-block xl:flex xl:flex-row gap-12 items-center justify-center pt-4 pb-4">
                     <li id="border" class="relative"><a href="" class="uppercase duration-200 hover:text-[#c5c4c4]">accueil</a></li>
                     <li><a href="" class="uppercase duration-200 hover:text-[#c5c4c4]">business school</a></li>
                     <li><a href="" class="uppercase duration-200 hover:text-[#c5c4c4]">ecole esport</a></li>
@@ -29,7 +29,7 @@
     </header>
     <main>
         <!-- section banner  -->
-        <section id="banner" class="bg-black h-[65vh] lg:h-[55vh] lg:pt-12">
+        <section id="banner" class="bg-black h-[65vh] lg:pt-12">
             <div class=" flex flex-col items-center justify-center text-white pt-32 ml-[5%]">
                 <img src="assets/img/logo-gc-hero.png" alt="logo gaming campus" class="-mt-24 lg:pb-0">
                 <h1 class="uppercase text-2xl lg:text-3xl text-center pt-16 w-[100%]">passion. professionnalisme. performances.</h1>
@@ -43,71 +43,71 @@
         </section>
 
         <!-- section cards gaming  -->
-        <section class="bg-black h-[100%] flex flex-col items-center justify-center lg:gap-12 lg:flex-row text-white text-2xl lg:pt-20 lg:pb-20">
+        <section class="bg-black h-[100%] flex flex-col items-center justify-center xl:gap-12 xl:flex-row text-white xl:pt-20 xl:pb-20">
             <!-- card gaming 1 -->
-            <div class=" w-[90%] pb-12  lg:w-[17.5%] flex flex-col items-center justify-center">
-                <img src="assets/img/logo-gbs-home.png" alt="logo gaming business school" class="w-3/4">
-                <h2 class="uppercase text-3xl pt-8">Gaming business school</h2>
+            <div class=" w-[90%] pb-12  xl:w-[17.5%] flex flex-col items-center justify-center">
+                <img src="assets/img/logo-gbs-home.png" alt="logo gaming business school" class="w-1/2 xl:w-3/4">
+                <h2 class="uppercase text-2xl pt-8 text-center">Gaming business school</h2>
                 <p class="text-center pt-4 w-5/6">Formez-vous dans la première école de management dédié au enjeux et métiers du jeu vidéo.</p>
                 <a href="" class="cta cta--primary uppercase pt-8 duration-200 hover:text-[#c5c4c4]">en savoir plus</a>
             </div>
-            <div class="w-[90%] pb-12  lg:w-[17.5%] flex flex-col items-center justify-center">
-                <img src="assets/img/logo-ga-home.png" alt="logo gaming Academy" class="w-3/4">
-                <h2 class="uppercase text-3xl pt-8">Gaming Academy</h2>
+            <div class="w-[90%] pb-12  xl:w-[17.5%] flex flex-col items-center justify-center">
+                <img src="assets/img/logo-ga-home.png" alt="logo gaming Academy" class="w-1/2 xl:w-3/4">
+                <h2 class="uppercase text-2xl pt-8 text-center">Gaming Academy</h2>
                 <p class="text-center pt-4 w-5/6">Entrainez-vous dans des conditions optimales pour devenir esportif professionnel</p>
                 <a href="" class="cta cta--primary uppercase pt-8 duration-200 hover:text-[#c5c4c4]">en savoir plus</a>
             </div>
-            <div class="w-[90%] pb-12 lg:w-[17.5%] flex flex-col items-center justify-center">
-                <img src="assets/img/logo-gg-home.png" alt="logo gaming guru" class="w-3/4">
-                <h2 class="uppercase text-3xl pt-8">Gaming Guru</h2>
+            <div class="w-[90%] pb-12 xl:w-[17.5%] flex flex-col items-center justify-center">
+                <img src="assets/img/logo-gg-home.png" alt="logo gaming guru" class="w-1/2 xl:w-3/4">
+                <h2 class="uppercase text-2xl pt-8 text-center">Gaming Guru</h2>
                 <p class="text-center pt-4 w-5/6">Jouez avec les meilleurs gamers pour vous améliorer dans vos jeux vidéo préférés</p>
                 <a href="" class="cta cta--primary uppercase pt-8 duration-200 hover:text-[#c5c4c4]">en savoir plus</a>
             </div> 
         </section>
         <!-- section news  -->
-        <section id="news" class="text-[1.25rem] bg-[#FAFAFA]">
+        <section id="news" class=" bg-[#FAFAFA]">
             <div>
                 <!-- news heading  -->
-                <div class="flex flex-col items-center lg:flex-row justify-center pt-16">
-                    <div class="flex flex-col text-center w-2/3">
-                        <h2 class="uppercase text-3xl">Les news du campus</h2>
-                        <p class="text-2xl">Suivez l'actualité de Gaming Campus, de G.Guru, G. et G.Academy.</p>
+                <div class="flex flex-col items-center xl:flex-row justify-center pt-16">
+                    <div class="flex flex-col  text-center w-2/3">
+                        <h2 class="uppercase text-2xl">Les news du campus</h2>
+                        <p>Suivez l'actualité de Gaming Campus, de G.Guru, G. et G.Academy.</p>
                     </div>
-                    <a href="" class="cta cta--secondary uppercase text-2xl duration-200 hover:text-[#000000ae] w-[80%] md:w-[35%] lg:max-w-72 lg:-ml-72">La newsroom ></a>
+                    <a href="" class="cta cta--secondary uppercase text-2xl duration-200 text-center hover:text-[#000000ae] w-[80%] md:w-[35%] xl:max-w-72 xl:-ml-24">La newsroom ></a>
                 </div>
                 <!-- news card  -->
-                <div class="lg:w-4/6 flex flex-col lg:flex-row items-center lg:items-start justify-center lg:ml-[15%] gap-16 lg:gap-44 pt-16">
+                <div class="xl:w-4/6 flex flex-col xl:flex-row items-center xl:items-start justify-center xl:ml-[15%] gap-16 xl:gap-44 pt-16 text-[1.25rem] xl:text-[1rem]">
                     <!-- card news 1  -->
-                    <div class="flex flex-col text-center w-[95%] md:w-3/5 lg:w-1/5 ">
+                    <div class="flex flex-col text-center w-[95%] md:w-3/5 xl:w-1/5 ">
                         <img src="assets/img/pgw18home.jpg" alt="image de la paris games week" class="rounded-xl  shadow-2xl">
                         <h3 class="pb-4 pt-4 text-left">Réunion d'information 19 décembre</h3>
                         <p class="text-left">Venez à notre rencontre lors de cette réunion d'information. Témoignages des étudiants / Ateliers sur la pédagogie par projet par projet "Active learning by gaming campus" / Découverte des locaux/ Rencontre avec l'équipe pédagogique / Questions réponse.</p>
-                        <a href="" class="news-link uppercase pt-4 text-lg text-blue-300 duration-200 hover:text-[#5c9ee9]">sur inscription ></a>
+                        <a href="" class="news-link uppercase pt-4 text-lg text-blue-300 duration-200 hover:text-[#5c9ee9] lg:pt-7 lg:pb-8">sur inscription ></a>
                     </div>
                     <!-- card news 2  -->
-                    <div class="flex flex-col text-center w-[95%] md:w-3/5 lg:w-1/5">
+                    <div class="flex flex-col text-center w-[95%] md:w-3/5 xl:w-1/5">
                         <img src="assets/img/pgw18home.jpg" alt="image de la paris games week" class="rounded-xl  shadow-2xl">
                         <h3 class="pb-4 pt-4 text-left">Paris Games week 2018 et réunions d'information</h3>
                         <p class=" text-left">Pendant tout le mois d'octobre venez rencotrer l'équipe pédagogique du Gaming Campus : 3 réunions d'information au Gaming Campus Lyon et stand Gaming Campus à la PGW17</p>
-                        <a href="" class="news-link uppercase pt-4 text-lg text-blue-300 lg:pt-28 duration-200 hover:text-[#5c9ee9]">lire la suite ></a>
+                        <a href="" class="news-link uppercase pt-4 text-lg text-blue-300 lg:pt-28 lg:pb-8 duration-200 hover:text-[#5c9ee9]">lire la suite ></a>
                     </div>
                     <!-- card news 3 -->
-                    <div class="flex flex-col text-center w-[95%] md:w-3/5 lg:w-1/5">
+                    <div class="flex flex-col text-center w-[95%] md:w-3/5 xl:w-1/5">
                         <img src="assets/img/inauguration_gaming_campus_photo.jpg" alt="image de la paris games week" class="rounded-xl shadow-2xl">
                         <h3 class="pb-4 pt-4 text-left">Inauguration Gaming Campus Lyon</h3>
                         <p class=" text-left">Revivez l'inaugurations du Gaming Campus Lyon avec les 180 invités, les grandes annonces de la rentrée, les photos de la soirée et les premières dates de réunions d'information.</p>
-                        <a href="" class="news-link uppercase pt-4 text-lg text-blue-300 lg:pt-28 duration-200 hover:text-[#5c9ee9]">lire la suite ></a>
+                        <a href="" class="news-link uppercase pt-4 text-lg text-blue-300 lg:pt-36 lg:pb-8 duration-200 hover:text-[#5c9ee9]">lire la suite ></a>
                     </div>
                 </div>
             </div>
         </section>
         <!-- FOOTER  -->
-         <footer class="pt-12 mx-auto">
-            <div id="footer-primary-content" class="flex flex-col lg:flex-row lg:m-0 justify-center gap-8 text-2xl relative w-[100%] md:w-3/4  ml-10 md:ml-[10%] lg:ml-[10%]">
+         <footer class="pt-12 mx-auto max-w-[100%] ml-0">
+            <div id="footer-primary-content" class="flex flex-col xl:flex-row xl:m-0 justify-center gap-8 text-2xl relative w-[100%] md:w-3/4  ml-0 md:ml-[10%] xl:ml-[10%]">
                 <a href="index.html">
-                    <img src="assets/img/logo-gc-footer.jpg" alt="Logo Gaming campus" class="duration-200 hover:opacity-75 ml-[15%] md:ml-[20%]">
+                    <img src="assets/img/logo-gc-footer.jpg" alt="Logo Gaming campus" class="duration-200 hover:opacity-75 ml-[35%] md:ml-[45%]">
                 </a>
-                <ul class="pl-0 md:pl-16 leading-[3.5rem] text-center lg:text-left">
+                <ul class="pl-0 md:pl-16 leading-[3.5rem] text-center xl:text-left">
                     <li class="uppercase pb-8 -mt-3">infos pratique</li>
                     <li><a href="" class="duration-200 hover:text-[#00000088]">Gaming Business School</a></li>
                     <li><a href="" class="duration-200 hover:text-[#00000088]">Gaming Academy</a></li>
@@ -117,39 +117,39 @@
                     <li><a href="" class="duration-200 hover:text-[#00000088]">Mentions légales</a></li>
                     <li><a href="" class="duration-200 hover:text-[#00000088]">C.G.U</a></li>
                 </ul>
-                <ul class="lg:w-96 pl-0 md:pl-16 lg:pl-0 text-center lg:text-left">
+                <ul class="xl:w-96 pl-0 md:pl-16 xl:pl-0 text-center xl:text-left">
                     <li class="uppercase pb-8"> Parents</li>
                     <li class="pb-8"><a href="" class="duration-200 hover:text-[#00000088]">Question / réponse pour vous accompagner dans votre réflexion sur l'orientation de votre enfant et le choix de Gaming Campus/</a></li>
                     <li><a href="" class="duration-200 hover:text-[#00000088]">En savoir plus</a></li>
                 </ul>
                 <div>
-                    <ul class="pb-12 pl-0 md:pl-16 lg:pl-0 text-center lg:text-left">
+                    <ul class="pb-12 pl-0 md:pl-16 xl:pl-0 text-center xl:text-left">
                         <li class="uppercase"></li>
                         <li class="pb-8">Tél. 04 28 29 81 03</li>
                         <li class="pb-8"> <a href="" class="duration-200 hover:text-[#00000088]">contact@gamingcampus.fr</a></li>
                     </ul>
-                    <div class="flex flex-col">
-                        <p class="uppercase pb-8 pl-0 md:pl-16 lg:pl-0 text-center lg:text-left">Nous suivre</p>
-                        <ul class="flex pl-0 md:pl-16 lg:pl-0">
+                    <div class="flex flex-col max-w-[100%]">
+                        <p class="uppercase pb-8 pl-0 md:pl-16 xl:pl-0 text-center xl:text-left">Nous suivre</p>
+                        <ul class="flex justify-center pl-0 md:pl-16 xl:pl-0">
                             <li class="pb-8"><a href=""><img src="assets/svg/twitter-black.svg" alt="logo de twitter" class="w-16 h-12 duration-200 hover:opacity-65"></a></li>
                             <li class="pb-8"><a href=""><img src="assets/svg/facebook-black.svg" alt="logo de facekook" class="w-16 h-12 duration-200 hover:opacity-65"></a></li>
                             <li class="pb-8"><a href=""><img src="assets/svg/linkedin-black.svg" alt="logo de linkedin" class="w-16 h-12 duration-200 hover:opacity-65"></a></li>
                             <li class="pb-8"><a href=""><img src="assets/svg/instagram-black.svg" alt="logo d'instagram"  class="w-16 h-12 duration-200 hover:opacity-65"></a></li>
                             </li>
                         </ul>
-                        <ul class="pl-0 md:pl-16 lg:pl-0 text-center lg:text-left">
+                        <ul class="pl-0 md:pl-16 xl:pl-0 text-center xl:text-left">
                             <li>&copy; 2018 Gaming Campus</li>
                             <li>Tous droits réservés.</li>
                         </ul>
                     </div>
                 </div>
             </div>
-            <div class="text-2xl flex flex-col lg:flex-row justify-center mt-52 pb-12">
+            <div class="text-2xl flex flex-col xl:flex-row justify-center mt-52 pb-12">
                 <div class="flex flex-col items-center mb-6">
                     <h3 class="uppercase font-semibold text-2xl pb-4">ils parlent de nous</h3> 
                     <p>Voir toutes les retombées presse.</p>
                 </div>
-               <ul class="flex flex-col items-center lg:flex-row gap-12">
+               <ul class="flex flex-col items-center xl:flex-row gap-12">
                 <li><img src="assets/img/figaro.png" alt="Logo du figaro" class="w-28 lg:w-20"></li>
                 <li><img src="assets/img/challenges.png" alt="Logo challenges" class="w-28 lg:w-20"></li>
                 <li><img src="assets/img/leparisien.png" alt="Logo du parisien" class="w-28 lg:w-20"></li>
@@ -161,7 +161,7 @@
             </div>
             <div class="bg-black flex flex-col p-6">
                 <h2 class="uppercase text-white text-4xl flex justify-center items-center"> partenaires officiels</h2>
-                <ul class="flex flex-col items-center lg:flex-row justify-center gap-16 lg:gap-28">
+                <ul class="flex flex-col items-center xl:flex-row justify-center gap-16 xl:gap-28">
                     <li><img src="assets/img/apollo.png" alt="Logo Apollo" class="w-24"></li>
                     <li><img src="assets/img/chiliz.png" alt="logo de chiliz" class="w-24"></li>
                     <li><img src="assets/img/omen.png" alt="logo d'Omen" class="w-24"></li>
