changed fonts size

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </section>
         <!-- FOOTER  -->
          <footer class="pt-12 mx-auto max-w-[100%] ml-0">
-            <div id="footer-primary-content" class="flex flex-col xl:flex-row xl:m-0 justify-center gap-8 text-2xl relative w-[100%] md:w-3/4  ml-0 md:ml-[10%] xl:ml-[10%]">
+            <div id="footer-primary-content" class="flex flex-col xl:flex-row xl:m-0 justify-center gap-8  relative w-[100%] md:w-3/4  ml-0 md:ml-[10%] xl:ml-[10%]">
                 <a href="index.html">
                     <img src="assets/img/logo-gc-footer.jpg" alt="Logo Gaming campus" class="duration-200 hover:opacity-75 ml-[35%] md:ml-[45%]">
                 </a>
@@ -144,9 +144,9 @@
                     </div>
                 </div>
             </div>
-            <div class="text-2xl flex flex-col xl:flex-row justify-center mt-52 pb-12">
+            <div class=" flex flex-col xl:flex-row justify-center mt-52 pb-12">
                 <div class="flex flex-col items-center mb-6">
-                    <h3 class="uppercase font-semibold text-2xl pb-4">ils parlent de nous</h3> 
+                    <h3 class="uppercase text-2xl pb-4">ils parlent de nous</h3> 
                     <p>Voir toutes les retombées presse.</p>
                 </div>
                <ul class="flex flex-col items-center xl:flex-row gap-12">
